--- a/doc/hpc.bib
+++ b/doc/hpc.bib
@@ -1,8 +1,29 @@
-@misc{cuda,
-  added-at = {2013-07-19},
-  author = {{NVIDIA Corporation}},
-  keywords = {CUDA},
-  note = {Version 5.0},
+@manual{cuda,
+  author = {{NVIDIA}},
+  keywords = {cuda, nvidia},
+  edition = {v5.5},
   title = {{NVIDIA CUDA C} Programming Guide},
+  month = jul,
   year = 2013
 }
+
+@manual{cuda_best_practice,
+  author = {{NVIDIA}},
+  keywords = {cuda, nvidia},
+  edition = {v5.5},
+  title = {{NVIDIA CUDA C} Best Practices Guide},
+  month = jul,
+  year = 2013
+}
+
+@manual{cublas,
+    author = {{NVIDIA}},
+    edition = {v5.5},
+    howpublished = {http://docs.nvidia.com/cublas/index.html},
+    keywords = {cuda, gpgpu, linear\_algebra, nvidia},
+    month = jul,
+    title = {{CUBLAS Library User Guide}},
+    url = {http://docs.nvidia.com/cublas/index.html},
+    year = {2013}
+}
+
