--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -155,8 +155,108 @@ keywords = "Drug development "
   title={Categorical data analysis},
   author={Agresti, Alan},
   year={2002},
+  Edition   = {{S}econd},
   publisher={John Wiley \& Sons}
 }
 
+@article{gmdr_gpu,
+  title={Development of GMDR-GPU for Gene-Gene Interaction Analysis and Its Application to WTCCC GWAS Data for Type 2 Diabetes},
+  author={Zhu, Zhixiang and Tong, Xiaoran and Zhu, Zhihong and Liang, Meimei and Cui, Wenyan and Su, Kunkai and Li, Ming D and Zhu, Jun},
+  journal={PloS one},
+  volume={8},
+  number={4},
+  pages={e61943},
+  year={2013},
+  publisher={Public Library of Science}
+}
 
+@article{boost_gene_gene,
+  title={BOOST: A fast approach to detecting gene-gene interactions in genome-wide case-control studies},
+  author={Wan, Xiang and Yang, Can and Yang, Qiang and Xue, Hong and Fan, Xiaodan and Tang, Nelson LS and Yu, Weichuan},
+  journal={The American Journal of Human Genetics},
+  volume={87},
+  number={3},
+  pages={325--340},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{gboost,
+  title={GBOOST: a GPU-based tool for detecting gene--gene interactions in genome--wide case control studies},
+  author={Yung, Ling Sing and Yang, Can and Wan, Xiang and Yu, Weichuan},
+  journal={Bioinformatics},
+  volume={27},
+  number={9},
+  pages={1309--1310},
+  year={2011},
+  publisher={Oxford Univ Press}
+}
+
+@article{winham_rf_2012,
+  title={SNP interaction detection with Random Forests in high-dimensional genetic data},
+  author={Winham, Stacey J and Colby, Colin L and Freimuth, Robert R and Wang, Xin and de Andrade, Mariza and Huebner, Marianne and Biernacka, Joanna M},
+  journal={BMC bioinformatics},
+  volume={13},
+  number={1},
+  pages={164},
+  year={2012},
+  publisher={BioMed Central Ltd}
+}
+
+@article{rothman1998modern,
+  title={Modern Epidemiology},
+  author={Rothman, KJ and Greenland, S},
+  year={1998},
+  publisher={London: Lippincott Williams and Wilkins}
+}
+
+@incollection{rothman2002intro_epidemiology,
+  title={Epidemiology: an introduction},
+  author={Rothman, Kenneth J},
+  booktitle={Epidemiology: an introduction},
+  year={2002},
+  publisher={Oxford University Press}
+}
+
+@article{beam_2007,
+  title={Bayesian inference of epistatic interactions in case-control studies},
+  author={Zhang, Yu and Liu, Jun S},
+  journal={Nature genetics},
+  volume={39},
+  number={9},
+  pages={1167--1173},
+  year={2007},
+  publisher={Nature Publishing Group}
+}
+
+@article{biforce,
+  title={BiForce Toolbox: powerful high-throughput computational analysis of gene--gene interactions in genome-wide association studies},
+  author={Gyenesei, Attila and Moody, Jonathan and Laiho, Asta and Semple, Colin AM and Haley, Chris S and Wei, Wen-Hua},
+  journal={Nucleic acids research},
+  volume={40},
+  number={W1},
+  pages={W628--W632},
+  year={2012},
+  publisher={Oxford Univ Press}
+}
+
+@inproceedings{cuda_lr,
+  title={CUDA-LR: CUDA-accelerated logistic regression analysis tool for gene-gene interaction for genome-wide association study},
+  author={Lee, Sungyoung and Kwon, Min-Seok and Huh, Ik-Soo and Park, Taesung},
+  booktitle={Bioinformatics and Biomedicine Workshops (BIBMW), 2011 IEEE International Conference on},
+  pages={691--695},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{genie_2012,
+  title={GENIE: a software package for gene-gene interaction analysis in genetic association studies using multiple GPU or CPU cores},
+  author={Chikkagoudar, Satish and Wang, Kai and Li, Mingyao},
+  journal={BMC research notes},
+  volume={4},
+  number={1},
+  pages={158},
+  year={2011},
+  publisher={BioMed Central Ltd}
+}
 
